syntax = "proto3";
package tax;

import "gogoproto/gogo.proto";
import "tax/params.proto";

option go_package = "github.com/Nolus-Protocol/nolus-core/x/tax/types";

// GenesisState defines the tax module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
}
